Added new sponsor section and modified cv web page

--- a/cv.html
+++ b/cv.html
@@ -75,12 +75,17 @@
                         <a onclick="javascript:reset_menus();$('#tab-courses-content').show();"
                             href="index.html#courses">Courses</a>
                     </li>
+
+                    <li class="page-scroll">
+                        <a onclick="javascript:reset_menus();$('#tab-service-content').show();"
+                            href="index.html#sponsor"><b>Sponsor</b></a>
+                    </li>
+
+                    
                     <li class="page-scroll">
                         <a onclick="javascript:reset_menus();$('#tab-service-content').show();"
                             href="index.html#research_position">Student Service</a>
                     </li>
-
-
 
                     <li class="page-scroll">
                         <a onclick="javascript:reset_menus();$('#tab-contact-content').show();"
@@ -151,7 +156,7 @@
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT">Oklahoma State University</TD>
-                        <TD ALIGN="RIGHT">Fax: +405-744-2450</TD>
+                        <TD ALIGN="RIGHT"><TT>aparanjothi.github.io</TT></TD>
                     </TR>
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
@@ -161,7 +166,7 @@
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT">Stillwater, 74075</TD>
-                        <TD ALIGN="RIGHT"><TT>https://cas.okstate.edu/paranjothi_bio.html</TT></TD>
+                        <TD ALIGN="RIGHT"><TT>https://cs.okstate.edu/paranjothi</TT></TD>
                     </TR>
                     <!-- <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT"><B>Data Management Systems Laboratory (DMSL)</B></TD> -->
                     <!-- <TD ALIGN="RIGHT"><TT>http://dmsl.cs.ucy.ac.cy/</TT></TD> -->
@@ -198,13 +203,13 @@
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT"><B>Ph.D.</B></TD>
-                        <TD ALIGN="LEFT">University of Oklahoma</TD>
+                        <TD ALIGN="CENTER">University of Oklahoma</TD>
                         <TD ALIGN="RIGHT">July 2022</TD>
                     </TR>
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT"><EM>School of Computer Science, Norman, United States</EM></TD>
+                        <TD ALIGN="CENTER"><EM>School of Computer Science, Norman, United States</EM></TD>
                         <TD ALIGN="RIGHT">&nbsp;</TD>
                     </TR>
 
@@ -215,7 +220,7 @@
                         <TD ALIGN="LEFT">
                             <B>MS</B>
                         </TD>
-                        <TD ALIGN="LEFT"><EM>Texas A&M University, Kingsville, United States</EM></TD>
+                        <TD ALIGN="CENTER"><EM>Texas A&M University, Kingsville, United States</EM></TD>
                         <TD ALIGN="RIGHT">July 2017</TD>
                     </TR>
                     <!-- <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">&nbsp;</TD>
@@ -228,7 +233,7 @@
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT"></TD>
-                        <TD ALIGN="LEFT">Dept of Electrical Engineering  &amp; Computer Science </TD>
+                        <TD ALIGN="CENTER">Dept of Electrical Engineering &amp; Computer Science </TD>
                         <!-- <TD ALIGN="RIGHT">June 2015 - May 2017</TD> -->
                     </TR>
 
@@ -264,7 +269,8 @@
                     </TR>
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">Oklahoma State University, Stillwater, United States</EM></TD>
+                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">Oklahoma State University, Stillwater, United
+                                States</EM></TD>
                         <TD ALIGN="RIGHT">&nbsp;</TD>
                     </TR>
 
@@ -285,12 +291,13 @@
                         <TD ALIGN="LEFT"><B>Graduate Research Assistant</B></TD>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="RIGHT" >June 2019 - July 2022</TD>
+                        <TD ALIGN="RIGHT">June 2019 - July 2022</TD>
                     </TR>
 
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">University of Oklahoma, Norman, United States</EM></TD>
+                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">University of Oklahoma, Norman, United States</EM>
+                        </TD>
                         <TD ALIGN="RIGHT">&nbsp;</TD>
                     </TR>
 
@@ -306,11 +313,12 @@
                         <TD ALIGN="LEFT"><B>Graduate Teaching Assistant</B></TD>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="RIGHT" >August 2017 – May 2019, August 2020 – May 2022</TD>
+                        <TD ALIGN="RIGHT">August 2017 – May 2019, August 2020 – May 2022</TD>
                     </TR>
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">University of Oklahoma, Norman, United States</EM></TD>
+                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">University of Oklahoma, Norman, United States</EM>
+                        </TD>
                         <TD ALIGN="RIGHT">&nbsp;</TD>
                     </TR>
 
@@ -326,11 +334,12 @@
                         <TD ALIGN="LEFT"><B>Graduate Teaching Assistant</B></TD>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="RIGHT" >August 2015 – May 2017</TD>
+                        <TD ALIGN="RIGHT">August 2015 – May 2017</TD>
                     </TR>
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">Texas A&M University, Kingsville, United States</EM></TD>
+                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">Texas A&M University, Kingsville, United
+                                States</EM></TD>
                         <TD ALIGN="RIGHT">&nbsp;</TD>
                     </TR>
 
@@ -581,7 +590,101 @@
                         Platoon‐Merging approach for cooperative driving"</a>, Anirudh Paranjothi
                 </DL>
 
-                <!-- <DL><span class="label label-success">shareok'2023</span> <a target="_blank"
+
+                <DL><span class="label label-success">Internet of Things 7, 100071, 2019</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:UeHWp8X0CEIC">"GSTR:
+                        Secure multi-hop message dissemination in connected vehicles using social trust model</a>,
+                    Anirudh Paranjothi, Mohammad S Khan, Sherali Zeadally, Ajinkya Pawar, David Hicks
+                </DL>
+
+                <DL><span class="label label-success">Transactions on Emerging Telecommunications Technologies 30 (6),
+                        e3595, 2019</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:qjMakFHDy7sC">"Hybrid‐Vehfog:
+                        a robust approach for reliable dissemination of critical messages in connected vehicles"</a>,
+                    Anirudh Paranjothi, Urcun Tanik, Yuehua Wang, Mohammad S Khan
+                </DL>
+
+                <DL><span class="label label-success">Ad Hoc Networks 82, 1-14, 2019</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:zYLM7Y9cAGgC">"Routing
+                        protocols and architecture for disaster area network: A survey"</a>, Anirudh Paranjothi, Yasmin
+                    Jahir, Mohammed Atiquzzaman, Hazem Refai, Peter G LoPresti
+                </DL>
+
+                <DL><span class="label label-success">2018 IEEE 88th Vehicular Technology Conference (VTC-Fall), 1-5,
+                        2018</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:9yKSN-GCB0IC">"Hybrid-vehcloud:
+                        An obstacle shadowing approach for vanets in urban environment"</a>, Anirudh Paranjothi,
+                    Mohammad S Khan, Mohammed Atiquzzaman
+                </DL>
+
+                <DL><span class="label label-success">Wired/Wireless Internet Communications: 16th IFIP WG 6.2
+                        International, 2018</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:_FxGoFyzp5QC">"DFCV:
+                        a novel approach for message dissemination in connected vehicles using dynamic fog"</a>, Anirudh
+                    Paranjothi, Mohammad S Khan, Mohammed Atiquzzaman
+                </DL>
+
+                <DL><span class="label label-success">Journal of Computer and Communications 5 (06), 1, 2017</span> <a
+                        target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:u-x6o8ySG0sC">"Survey
+                        on three components of mobile cloud computing: offloading, distribution and privacy"</a>,
+                    Anirudh Paranjothi, Mohammad S Khan, Mais Nijim
+                </DL>
+
+                <DL><span class="label label-success">Texas A&M University, 2017</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:IjCSPb-OGe4C">"Location
+                        Aware Message Dissemination in Connected Vehicles Using Multihop Technique"</a>, Anirudh
+                    Paranjothi
+                </DL>
+
+                <DL><span class="label label-success">2016 IEEE 7th Annual Ubiquitous Computing, Electronics & Mobile,
+                        2016</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:u5HHmVD_uO8C">"MAvanet:
+                        Message authentication in VANET using social networks"</a>, Anirudh Paranjothi, Mohammad S Khan,
+                    Mais Nijim, Rajab Challoo
+                </DL>
+
+                <DL><span class="label label-success">academia.edu</span> <a target="_blank"
+                    href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:LkGwnXOMwfcC">"MAvanet: Message Authentication in VANET using QR-codes"</a>, Anirudh
+                Paranjothi, Mohammad S Khan, Dr Rajab Challoo Mais Nijim
+            </DL>
+
+            <DL><span class="label label-success">researchgate.net</span> <a target="_blank"
+                href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:Y0pCki6q_DkC">"Hybrid-Vehcloud: A Novel Approach for Enhancing Dissemination of Messages in Connected Vehicles"</a>, Anirudh Paranjothi, Mohammad S Khan, Mohammed Atiquzzaman
+        </DL>
+
+        <H2><A NAME="SECTION00051000000000000000">
+            Synergistic Activities</A>
+        </H2>
+
+        <h3><b>Student Advising</b></h3>
+    <ol>
+        <li>Advisor: Abinash Borah (Fall 22 – Present), Mohammed Suratwala (Fall 22 – Present), Adele Gideon (Spring 23 – Present), Shashank Pola (Fall 22)</li>
+        <li>Mentor: Reece Harrel (Fall 22)</li>
+    </ol>
+    <h3><b>Department Service</b></h3>
+    <ol>
+        <li>Member of Graduate committee, Department of Computer Science, Oklahoma State University</li>
+        <li>Thesis committee member for Master’s and Ph.D. students</li>
+        <li>Creative component committee chair and member for Master’s students</li>
+    </ol>
+    
+    <h3><b>Invited Talks and Presentations</b></h3>
+    <ul>
+        <li>Presentation: "Cellular Vehicle-to-Everything (CV2X) for Connected Vehicles," O-DoT 2022</li>
+        <li>Invited Talk: "Vehicular Ad-hoc Networks Challenges and Future Directions," West Virginia University 2022</li>
+        <li>Invited Talk: "Intrusion Detection and Prevention in Connected Vehicles," University at Albany - SUNY 2022</li>
+        <li>Invited Talk: "Efficient Routing and Types of Security Attacks in VANETs," California State University - Fullerton 2021</li>
+        <li>Invited Talk: "Network Attacks and Network Security Threats in Mobile Networks," University of Oklahoma 2021</li>
+        <li>Invited Talk: “Fog computing for Connected Vehicles,” Oklahoma Transportation Research Day (OTRD) 2019</li>
+        <li>Invited Talk: "Message Dissemination in Connected Vehicles using Dynamic Fog," University of Oklahoma 2019</li>
+        <li>Invited Talk: “Reliable Critical Message Dissemination in Connected Vehicles,” University of Oklahoma 2018</li>
+        <li>Invited Talk: “Dynamic Fog for Connected Vehicles,” Oklahoma Transportation Research Day (OTRD) 2018</li>
+        <li>Invited Talk: “Message Authentication using Social Networks,” Texas A&M University, Kingsville 2016</li>
+    </ul>
+
+
+            <!-- <DL><span class="label label-success">shareok'2023</span> <a target="_blank"
                         href="https://shareok.org/handle/11244/337169">"Misbehavior Aware on-demand Intrusion Detection
                         System To Enhance Security in VANETs with Efficient Rogue Nodes Detection and Prevention
                         Techniques"</a>,Anirudh Paranjothi, University of Oklahoma -
@@ -641,12 +744,14 @@
                 </LI>
 
             </UL> -->
-             <UL>
-                <LI><B>06/2023-06/2024 (PI):</B> <EM>Arts and Science Summer Researcher Award(ASR)</EM>, Oklahoma State University.
+            <UL>
+                <LI><B>06/2023-06/2024 (PI):</B> <EM>Arts and Science Summer Researcher Award(ASR)</EM>, Oklahoma State
+                    University.
 
                     <P>
                 </LI>
-                <LI><B>08/2023-04/2023 (PI):</B> <EM>Advancing Undergraduate Research and Creative Activity(AURCA)</EM>, Oklahoma State University.
+                <LI><B>08/2023-04/2023 (PI):</B> <EM>Advancing Undergraduate Research and Creative Activity(AURCA)</EM>,
+                    Oklahoma State University.
 
                     <P>
                 </LI>
@@ -663,7 +768,7 @@
 
 
 
-            <!-- <P>
+                <!-- <P>
 
             <H1><A NAME="SECTION000150000000000000000">
                     <B>LANGUAGES</B></A>
