--- a/pub.html
+++ b/pub.html
@@ -423,10 +423,17 @@
                         <a onclick="javascript:reset_menus();$('#tab-courses-content').show();"
                             href="index.html#courses"><b>Courses</b></a>
                     </li>
+
+                    <li class="page-scroll">
+                        <a onclick="javascript:reset_menus();$('#tab-service-content').show();"
+                            href="index.html#sponsor"><b>Sponsor</b></a>
+                    </li>
+
                     <li class="page-scroll">
                         <a onclick="javascript:reset_menus();$('#tab-service-content').show();"
                             href="index.html#research_position"><b>Student Service</b></a>
                     </li>
+
                     <!-- <li class="page-scroll">
                             <a onclick="javascript:reset_menus();$('#tab-service-content').show();" href="#service">Awards</a>
                         </li> -->
@@ -926,7 +933,7 @@
     <footer>
         <small>
             <center>
-                © 2023 | Dr. Paranjothi. Credits: AR template
+                © 2023 | Dr. Paranjothi. Credits: Oklahoma State University
                 <a onclick="javascript:$('#credit').toggle();"><img border="0" src="images/ccby.png" /></a>
                 <div style="display:none;" id="credit">[AR template available under Creative Commons CC BY 4.0 licence:
                     <a href="https://github.com/dmsl/academic-responsive-template" target="_blank">
