--- a/index.html
+++ b/index.html
@@ -586,8 +586,7 @@
                                             </span>
 
                                             <a target="_blank">
-                                                <p style="text-align:left; font-size: 16px;"><b>
-                                                        Our
+                                                <p style="text-align:left; font-size: 16px;"><b>Our
                                                         paper got accepted in IEEE CCNC 2024 conference.</b>
                                                 </p>
                                             </a>
