--- a/index.html
+++ b/index.html
@@ -568,6 +568,14 @@
                                                 style="font-size: 15px;"><b>2023:</b></span>
                                             </span>
 
+					    <a target="_blank">
+                                                <p style="text-align:left; font-size: 16px;"><b> Congratulations Gideon.
+                                                        Our
+                                                        paper got accepted in IEEE CCWC 2024 conference.</b>
+                                                </p>
+                                            </a>
+                                        </li>
+
                                             <a target="_blank">
                                                 <p style="text-align:left; font-size: 16px;"><b>
                                                         Our
