--- a/index.html
+++ b/index.html
@@ -418,8 +418,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+		<!--
                 <span><a href="#"><img border="0" width="90" style="margin:5px"
-                            src="https://digitalassets.okstate.edu/m/5edd2b756cf31c9c/original/Logo-Web-Ready.svg" /></a></span>
+                            src="https://digitalassets.okstate.edu/m/5edd2b756cf31c9c/original/Logo-Web-Ready.svg" /></a></span>  -->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
