--- a/index.html
+++ b/index.html
@@ -1155,10 +1155,10 @@
                     </h4>
 
                     <ul>
-                        <li><span class="label label-success">IEEEE 14th Ubiquitous Computing, Electronics, and Mobile
+                        <li><span class="label label-success">IEEE 14th Ubiquitous Computing, Electronics, and Mobile
                                 Communication Conference (UEMCON), 2023</span> <a target="_blank"
                                 href="https://www.researchgate.net/publication/374024616_Sybil_Attack_Detection_in_VANETs_Using_Fog_Computing_and_Beamforming">“Sybil
-                                Attach Detection in VANETs using Fog Computing and Beamforming”</a>,
+                                Attack Detection in VANETs using Fog Computing and Beamforming”</a>,
                             Anirudh Paranjothi and Abinash Borah
                         </li>
 
