--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@
                     <ul>
                         <li><span class="label label-success">CS5243</span> <a
                                 href="http://catalog.okstate.edu/search/?search=Introduction+to+Computer+Security">Introduction
-                                to Computer Security</a> (Summer)</li>
+                                to Computer Security</a> (Spring, Summer)</li>
                         <li><span class="label label-default">CS5070</span> <a target="_blank"
                                 href="http://catalog.okstate.edu/search/?search=+Seminar+and+Special+Problems+%28+Independent+Study%29">Seminar
                                 and Special Problems </a>(Independent Study)</li>
