--- a/index.html
+++ b/index.html
@@ -506,8 +506,7 @@
         <div class="container">
             <div>
                 <marquee style="font-size: 20px; color:
-                #fb5c04;font-weight: bolder;">Graduate or undergraduate students looking for research
-                    work. Please contact me at ( <a href="mailto:anirudh.paranjothi@okstate.edu"
+                #fb5c04;font-weight: bolder;">Graduate or undergraduate students looking for Thesis option, please contact me at ( <a href="mailto:anirudh.paranjothi@okstate.edu"
                         style="color: black;">anirudh.paranjothi@okstate.edu </a>) </marquee>
                 <br><br>
             </div>
