--- a/index.html
+++ b/index.html
@@ -518,8 +518,7 @@
             </div>
             <div align="left" class="col-md-4">
                 <h2>Anirudh Paranjothi
-                    <h5 style="font-family: Arial, sans-serif; font-size: 16px;"><i>PhD in computer science from the
-                            University of Oklahoma</i></h5>
+                    <h5 style="font-family: Arial, sans-serif; font-size: 16px;"><i>PhD(CS), University of Oklahoma</i></h5>
                 </h2>
 
 
