--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,9 @@
                             <div class="clearfix float-my-children">      
                                 <table width="100%">
                                     <tbody><tr>
-                                    
+                                    <td width="40%">
+                                        <img src="./images/NSF.png" style="float: left;" alt="" width="180" height="184">
+                                    </td>
                                     <td width="40%">
                                         <img src="./images/OKDOT.png" style="float: left;" alt="" width="180" height="184">
                                     </td>
