--- a/index.html
+++ b/index.html
@@ -1471,7 +1471,7 @@
 
             </div>
 
-	                <div class="border-top my-3"></div>
+	                <!-- <div class="border-top my-3"></div> -->
 
             <div class="row text-center">
 
