--- a/index.html
+++ b/index.html
@@ -1473,7 +1473,7 @@
 
 	                <!-- <div class="border-top my-3"></div> -->
 
-            <div class="row text-center">
+           <!-- <div class="row text-center"> -->
 
                 <div class="col-lg-3">
                     <img class="rounded-circle z-depth-2" alt="100x100" width="120" height="120"
