--- a/index.html
+++ b/index.html
@@ -1416,7 +1416,40 @@
                 </div>
             </div>
 
+<div class="border-top my-3"></div> 
 
+            <div class="row text-center">
+
+                <div class="col-lg-3">
+                    <img class="rounded-circle z-depth-2" alt="100x100" width="120" height="120"
+                        style="border-radius: 60px;"
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
+                        data-holder-rendered="true">
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/abdullakarjikar/"
+                            target="_blank" style="color: #dd7564">Abdulla Karjikar</a></h4>
+                    <p class="text-muted fs-5">MS (CS)</p>
+                </div>
+
+                <div class="col-lg-3">
+                    <img class="rounded-circle z-depth-2" alt="100x100" width="120" height="120"
+                        style="border-radius: 60px;"
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
+                        data-holder-rendered="true">
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/quentin-koeninger-a77b35250/"
+                            target="_blank" style="color: #dd7564">Quentin Koeninger</a></h4>
+                    <p class="text-muted fs-5">BS (Honors)</p>
+                </div>
+
+                <div class="col-lg-3">
+                    <img class="rounded-circle z-depth-2" alt="100x100" width="120" height="120"
+                        style="border-radius: 60px;"
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
+                        data-holder-rendered="true">
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/morton-t/" target="_blank"
+                            style="color: #dd7564">Morton
+                            Thomas</a></h4>
+                    <p class="text-muted fs-5"> BS (Honors Thesis)</p>
+                </div>
 
 
             </div>
@@ -1471,40 +1504,7 @@
 
             </div>
 
-	                <!-- <div class="border-top my-3"></div> -->
-
-           <!-- <div class="row text-center"> -->
-
-                <div class="col-lg-3">
-                    <img class="rounded-circle z-depth-2" alt="100x100" width="120" height="120"
-                        style="border-radius: 60px;"
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
-                        data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/abdullakarjikar/"
-                            target="_blank" style="color: #dd7564">Abdulla Karjikar</a></h4>
-                    <p class="text-muted fs-5">MS (CS)</p>
-                </div>
-
-                <div class="col-lg-3">
-                    <img class="rounded-circle z-depth-2" alt="100x100" width="120" height="120"
-                        style="border-radius: 60px;"
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
-                        data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/quentin-koeninger-a77b35250/"
-                            target="_blank" style="color: #dd7564">Quentin Koeninger</a></h4>
-                    <p class="text-muted fs-5">BS (Honors)</p>
-                </div>
-
-                <div class="col-lg-3">
-                    <img class="rounded-circle z-depth-2" alt="100x100" width="120" height="120"
-                        style="border-radius: 60px;"
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
-                        data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/morton-t/" target="_blank"
-                            style="color: #dd7564">Morton
-                            Thomas</a></h4>
-                    <p class="text-muted fs-5"> BS (Honors Thesis)</p>
-                </div>
+	                 
 
             <br>
 
