--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <meta name="twitter:description" property="twitter:description"
         content="Professional web page resume for Anirudh Paranjothi" />
     <meta name="og_image" property="og:image"
-        content="https://cas.okstate.edu/department_of_computer_science/site_files/images/staff_faculty_images/paranjothi_headshot.jpg" />
+        content="https://cas.okstate.edu/department_of_computer_science/site_files/images/Anirudh Paranjothi - 001.jpg" />
     <meta name="msapplication-TileImage"
-        content="https://cas.okstate.edu/department_of_computer_science/site_files/images/staff_faculty_images/paranjothi_headshot.jpg"
+        content="https://cas.okstate.edu/department_of_computer_science/site_files/images/Anirudh Paranjothi - 001.jpg"
         meta property="og:image:type" content="image/jpeg" />
     <meta name="twitter:image" property="twitter:image"
-        content="https://cas.okstate.edu/department_of_computer_science/site_files/images/staff_faculty_images/paranjothi_headshot.jpg" />
+        content="https://cas.okstate.edu/department_of_computer_science/site_files/images/Anirudh Paranjothi - 001.jpg" />
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -513,7 +513,7 @@
             <div align="left" class="col-md-3">
                 <a target="_blank" href="images/Paranjothi.jpg">
                     <img id="mobile-img"
-                        src="https://cas.okstate.edu/department_of_computer_science/site_files/images/staff_faculty_images/paranjothi_headshot.jpg"
+                        src="https://cas.okstate.edu/department_of_computer_science/site_files/images/Anirudh Paranjothi - 001.jpg"
                         width="200" border="0" height="270" style="object-fit: cover;" alt=""></a>
             </div>
             <div align="left" class="col-md-4">
