--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@
                 <div class="col-lg-3">
                     <img class="rounded-circle z-depth-2" alt="100x100" style="border-radius: 60px;" width="140"
                         height="140"
-                        src="https://cas.okstate.edu/department_of_computer_science/site_files/images/staff_faculty_images/paranjothi_headshot.jpg"
+                        src="https://cas.okstate.edu/department_of_computer_science/site_files/images/Anirudh Paranjothi - 001.jpg"
                         data-holder-rendered="true">
                     <h4 class="okstate_orange"><a
                             href="https://cas.okstate.edu/department_of_computer_science/directory/bio/paranjothi_bio.html"
