--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <meta name="twitter:description" property="twitter:description"
         content="Professional web page resume for Anirudh Paranjothi" />
     <meta name="og_image" property="og:image"
-        content="https://cas.okstate.edu/department_of_computer_science/site_files/images/Anirudh Paranjothi - 001.jpg" />
+        content="./images/Anirudh Paranjothi - 001.jpg" />
     <meta name="msapplication-TileImage"
-        content="https://cas.okstate.edu/department_of_computer_science/site_files/images/Anirudh Paranjothi - 001.jpg"
+        content="./images/Anirudh Paranjothi - 001.jpg"
         meta property="og:image:type" content="image/jpeg" />
     <meta name="twitter:image" property="twitter:image"
-        content="https://cas.okstate.edu/department_of_computer_science/site_files/images/Anirudh Paranjothi - 001.jpg" />
+        content="./images/Anirudh Paranjothi - 001.jpg" />
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
