--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             <div align="left" class="col-md-3">
                 <a target="_blank" href="images/Paranjothi.jpg">
                     <img id="mobile-img"
-                        src="https://cas.okstate.edu/department_of_computer_science/site_files/images/Anirudh Paranjothi - 001.jpg"
+                        src="./images/Anirudh Paranjothi - 001.jpg"
                         width="200" border="0" height="270" style="object-fit: cover;" alt=""></a>
             </div>
             <div align="left" class="col-md-4">
