--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 <br><br>
             </div>
             <div align="left" class="col-md-3">
-                <a target="_blank" href="images/Paranjothi.jpg">
+                <a target="_blank" href="images/Anirudh Paranjothi - 001.jpg">
                     <img id="mobile-img"
                         src="./images/Anirudh Paranjothi - 001.jpg"
                         width="200" border="0" height="270" style="object-fit: cover;" alt=""></a>
